# LangGraph-Tutorial

./: apology_email_to_josh_meeting_lateness.txt  pyproject.toml
Agents/Agent-1/: agent_bot.py
Agents/Agent-2/: memory_agent.py
Agents/Agent-3/: ReAct_agent.py
Agents/Agent-4/: drafter_agent.py
Notebooks/Graph-1/: exercise_1.ipynb  hello_world.ipynb
Notebooks/Graph-2/: exercise_2.ipynb  multiple_inputs.ipynb
Notebooks/Graph-3/: Sequential_agent.ipynb  exercise_3.ipynb
Notebooks/Graph-4/: conditional_agent.ipynb  exercise_4.ipynb
Notebooks/Graph-5/: exercise_5.ipynb  loop_agent.ipynb
